--- a/index.html
+++ b/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>VIT 12th Facebook Frame Maker</title>
 </head>
+
 <body>
-    <script language="javascript" src="main.js"></script>
-    <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
-    <div class="content">
-        <p>Nhập link trang cá nhân của bạn: </p>
-        <input type="text" id="profile-link">
-        <button onClick="createFrame()">Tạo frame</button>
-    </div>
+  <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
+  <div class="content">
+    <p>Nhập link trang cá nhân của bạn: </p>
+    <div class="fb-login-button" data-width="" data-size="large" data-button-type="continue_with" data-layout="default"
+      data-auto-logout-link="false" data-use-continue-as="false"></div>
+    <input type="text" id="profile-link">
+    <button onClick="createFrame()">Tạo frame</button>
+  </div>
+  <script language="javascript" src="main.js"></script>
+  <script>
+    window.fbAsyncInit = function () {
+      FB.init({
+        appId: 'your-app-id',
+        autoLogAppEvents: true,
+        xfbml: true,
+        version: 'v11.0'
+      });
+    };
+  </script>
+  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
 </body>
+
 </html>
