--- a/index.html
+++ b/index.html
@@ -8,16 +8,26 @@
 <body>
   <script language="javascript" src="main.js"></script>
   <script>
-    window.fbAsyncInit = function () {
+    window.fbAsyncInit = function() {
       FB.init({
-        appId: 'your-app-id',
-        autoLogAppEvents: true,
-        xfbml: true,
-        version: 'v11.0'
+        appId      : '{your-app-id}',
+        cookie     : true,
+        xfbml      : true,
+        version    : '{api-version}'
       });
+        
+      FB.AppEvents.logPageView();   
+        
     };
+  
+    (function(d, s, id){
+       var js, fjs = d.getElementsByTagName(s)[0];
+       if (d.getElementById(id)) {return;}
+       js = d.createElement(s); js.id = id;
+       js.src = "https://connect.facebook.net/en_US/sdk.js";
+       fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk'));
   </script>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
   <div class="content">
     <p>Nhập link trang cá nhân của bạn: </p>
