--- a/index.html
+++ b/index.html
@@ -6,21 +6,32 @@
 </head>
 
 <body>
+
+
   <script>
     window.fbAsyncInit = function () {
       FB.init({
         appId: '1005107760342265',
-        autoLogAppEvents: true,
+        cookie: true,
         xfbml: true,
         version: 'v11.0'
       });
+
+      FB.AppEvents.logPageView();
+
     };
+
+    (function (d, s, id) {
+      var js, fjs = d.getElementsByTagName(s)[0];
+      if (d.getElementById(id)) { return; }
+      js = d.createElement(s); js.id = id;
+      js.src = "https://connect.facebook.net/en_US/sdk.js";
+      fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
   </script>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js"></script>
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
   <div class="content">
     <p>Nhập link trang cá nhân của bạn: </p>
-    <input type="text" id="profile-link">
     <button onClick="createFrame()">Tạo frame</button>
   </div>
 </body>
