--- a/index.html
+++ b/index.html
@@ -30,9 +30,10 @@
   <script src="main.js"></script>
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
   <div class="content">
-    <p>Nhập link trang cá nhân của bạn: </p>
+    <p>Mời đăng nhập với facebook của bạn</p>
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState()">
     </fb:login-button>
+    <img id="user-avatar-before" src="" alt="user-avatar-before">
   </div>
 </body>
 
