--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <script src="main.js"></script>
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
   <div class="content">
-    <p>Mời đăng nhập với facebook của bạn</p>
+    <span>Mời đăng nhập với facebook của bạn </span>
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState()">
     </fb:login-button>
     <img id="user-avatar-before" src="" alt="user-avatar-before">
