--- a/index.html
+++ b/index.html
@@ -33,7 +33,9 @@
     <span>Mời đăng nhập với facebook của bạn </span>
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState()">
     </fb:login-button>
-    <img id="user-avatar-before" src="" alt="user-avatar-before">
+    <div>
+      <img id="user-avatar-before" src="" alt="user-avatar-before">
+    </div>
   </div>
 </body>
 
