--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
     <span>Mời đăng nhập với facebook của bạn </span>
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState()">
     </fb:login-button>
+    <div style="height: 32px; display: flex; align-items: center;">
+      Kết quả:</div>
   </div>
 </body>
 
