--- a/index.html
+++ b/index.html
@@ -6,31 +6,12 @@
 </head>
 
 <body>
-  <script>
-    window.fbAsyncInit = function () {
-      FB.init({
-        appId: '1005107760342265',
-        cookie: true,
-        xfbml: true,
-        version: 'v11.0'
-      });
-
-      FB.AppEvents.logPageView();
-
-    };
-
-    (function (d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) { return; }
-      js = d.createElement(s); js.id = id;
-      js.src = "https://connect.facebook.net/en_US/sdk.js";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-  </script>
   <script src="main.js"></script>
+  <link rel="stylesheet" href="croppie.css" />
+  <script src="croppie.js"></script>
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
   <div class="content">
-    <span>Mời đăng nhập với facebook của bạn </span>
+    <button class="btn-add-avatar" id="add-avatar"></button>
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState()">
     </fb:login-button>
     <div style="height: 32px; display: flex; align-items: center;">
