--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
 <body>
   <script src="main.js"></script>
-  <link rel="stylesheet" href="croppie.css" />
-  <script src="croppie.js"></script>
+  <link rel="stylesheet" href="./Croppie-2.6.5/croppie.css" />
+  <script src="./Croppie-2.6.5/croppie.js"></script>
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
   <div class="content">
     <button class="btn-add-avatar" id="add-avatar"></button>
