--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./Croppie-2.6.5/croppie.css" />
   <script src="./Croppie-2.6.5/croppie.js"></script>
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
-  <div class="content">
+  <div class="content" id="content">
     <button class="btn-add-avatar" id="add-avatar"></button>
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState()">
     </fb:login-button>
