--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
   <title>VIT 12th Facebook Frame Maker</title>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.5/croppie.min.js"></script>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/croppie/2.6.5/croppie.min.css" />
 </head>
 
 <body>
-  <script src="./node_modules/croppie/croppie.js"></script>
   <script src="main.js"></script>
-  <link rel="stylesheet" href="./node_modules/croppie/croppie.css" />
   <h1 class="heading">VIT 12th Birthday Facebook Frame Maker</h1>
   <div class="content" id="content">
     <button class="btn-add-avatar" id="add-avatar"></button>
