--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button onclick="confirmFile()">Download</button>
     </div>
     <div id="preview">
-      <img src="" id="fg"></img>
+      <img src="" id="frame"></img>
       <img src="" id="profile-pic" style="display: none">
     </div>
   </div>
