--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <h1 class="text-center">VIT 12th Birthday Facebook Frame Maker</h1>
   <div id="about">
     <p class="text-italic">
-      Hướng dẫn: Nhấn "Choose File" để tải ảnh lên và căn chỉnh, sau đó nhấn "Download" để tải ảnh về
+      Hướng dẫn: Nhấn "Choose File"/"Chọn tệp" để tải ảnh lên và căn chỉnh, sau đó nhấn "Download" để tải ảnh về
       <br>
       Lưu ý: Up file có định dạng .jpg, .jpeg, .png ...
     </p>
