--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </div>
   </div>
   <div class="footer text-italic">
-    Phần mềm sơ khai nên còn nhiều bug, ae thông cảm nhé :v Code nghịch nghịch tí thui =)))
+    Phần mềm khum bản quyền :v
   </div>
 </body>
 
